@@ -29,8 +29,8 @@
 
 #define M_MLIT(c) c ## f128
 
-#include <math-nan-payload-float128.h>
 #include <libm-alias-float128.h>
+#include <math-nan-payload-float128.h>
 
 #ifndef declare_mgen_alias
 # define declare_mgen_alias(from, to) libm_alias_float128 (from, to)
